--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "postbuild": "workbox generateSW workbox-config.cjs",
+    "postbuild": "workbox generateSW workbox.config.cjs",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.3.2",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "workbox-cli": "^7.0.0"
   }
 }
